--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/02DotNet/HelloWorld/bin/Debug/net5.0/HelloWorld.dll",
+            "program": "${workspaceFolder}/03CSharp/PetManagment/App/bin/Debug/net6.0/App.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/02DotNet/HelloWorld",
+            "cwd": "${workspaceFolder}/03CSharp/PetManagment/App",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
