--- a/04SQL/BL/BL.csproj
+++ b/04SQL/BL/BL.csproj
@@ -5,6 +5,12 @@
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="serilog" Version="2.10.0" />
+    <PackageReference Include="serilog.sinks.console" Version="4.0.0" />
+    <PackageReference Include="serilog.sinks.file" Version="5.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
