--- a/04SQL/UI/UI.csproj
+++ b/04SQL/UI/UI.csproj
@@ -11,6 +11,9 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="serilog" Version="2.10.0" />
+    <PackageReference Include="serilog.sinks.console" Version="4.0.0" />
+    <PackageReference Include="serilog.sinks.file" Version="5.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
