add database and DAL

--- a/05MVC/NoteTakingApp/NoteTakingApp.DataAccess/NoteTakingApp.DataAccess.csproj
+++ b/05MVC/NoteTakingApp/NoteTakingApp.DataAccess/NoteTakingApp.DataAccess.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
@@ -10,10 +9,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\NoteTakingApp.DataAccess\NoteTakingApp.DataAccess.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
   </ItemGroup>
 
 </Project>
