--- a/05MVC/NoteTakingApp/NoteTakingApp.DataAccess/NoteTakingApp.DataAccess.csproj
+++ b/05MVC/NoteTakingApp/NoteTakingApp.DataAccess/NoteTakingApp.DataAccess.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NoteTakingApp.Domain\NoteTakingApp.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
