create migrations, connect to sqlite

--- a/05MVC/SimpleOrderApp/SimpleOrderApp.WebApp/appsettings.Development.json
+++ b/05MVC/SimpleOrderApp/SimpleOrderApp.WebApp/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=C:\\revature\\simpleorder.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
