--- a/06DevOps/azure-pipelines-notes-app.yml
+++ b/06DevOps/azure-pipelines-notes-app.yml
@@ -18,5 +18,11 @@ stages:
       vmImage: ubuntu-latest
 
     steps:
-    - script: ls
-      displayName: ls
+    - script: |
+        pwd
+        cd 05MVC
+      displayName: cd
+
+    - script: |
+        pwd
+      displayName: pwd
