pipeline: dotnet task build

--- a/06DevOps/azure-pipelines-notes-app.yml
+++ b/06DevOps/azure-pipelines-notes-app.yml
@@ -18,11 +18,7 @@ stages:
       vmImage: ubuntu-latest
 
     steps:
-    - script: |
-        pwd
-        cd 05MVC
-      displayName: cd
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: 'build'
 
-    - script: |
-        pwd
-      displayName: pwd
