pipeline: nuget restore for vs

--- a/06DevOps/azure-pipelines-notes-app.yml
+++ b/06DevOps/azure-pipelines-notes-app.yml
@@ -31,6 +31,12 @@ stages:
     pool:
       vmImage: windows-latest
     steps:
+    - task: NuGetCommand@2
+      displayName: nuget restore
+      inputs:
+        command: 'restore'
+        restoreSolution: '05MVC/NoteTakingApp/*.sln'
+        feedsToUse: 'select'
     - task: VSBuild@1
       displayName: visual studio build
       inputs:
