gitignore bunch of files dotnet sonarscanner made

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# dotnet sonarscanner generated files
+.sonarqube/
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,csharp,dotnetcore
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,visualstudiocode,csharp,dotnetcore
