--- a/06DevOps/azure-pipelines-notes-app.yml
+++ b/06DevOps/azure-pipelines-notes-app.yml
@@ -35,6 +35,12 @@ stages:
         packageType: 'sdk'
         version: '5.x'
 
+    - task: UseDotNet@2
+      displayName: dotnet runtime 3.1
+      inputs:
+        packageType: 'runtime'
+        version: '3.1.x'
+
     - task: SonarCloudPrepare@1
       displayName: sonar prepare
       inputs:
