fix notestakingapp to use sqlite in development mode by default

--- a/05MVC/NoteTakingApp/NoteTakingApp.WebApp/appsettings.Development.json
+++ b/05MVC/NoteTakingApp/NoteTakingApp.WebApp/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "NotesDb": "Data Source=C:/revature/notesdb.db"
+  },
+  "UseSqlite": "true",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
