--- a/05MVC/NoteTakingApp/NoteTakingApp.WebApp/NoteTakingApp.WebApp.csproj
+++ b/05MVC/NoteTakingApp/NoteTakingApp.WebApp/NoteTakingApp.WebApp.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.18" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
