--- a/08Angular/ts-demo/package.json
+++ b/08Angular/ts-demo/package.json
@@ -5,14 +5,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "echo nothing to start",
+    "start": "http-server dist -o",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf out/* && tsc && cp src/*.html out",
+    "build": "rm -rf out/* dist/* && tsc && webpack && cp src/*.html dist",
     "tsc-version": "tsc -v"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "webpack": "^5.52.1",
+    "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "http-server": "^13.0.2"
   }
 }
